Add Judge Guthmann, Walz defense questions, align Walz/MDE framing

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </div>
           <div class="timeline-item warning">
             <span class="timeline-date">Mid 2021</span>
-            <span class="timeline-event">FOF sues MDE. <strong>Payments resume.</strong> Who made this call?</span>
+            <span class="timeline-event">FOF sues MDE. <strong>Judge John Guthmann</strong> orders payments resume, threatens commissioner with jail. Walz later claims: "The judge made us pay."</span>
           </div>
           <div class="timeline-item">
             <span class="timeline-date">Jan 2022</span>
@@ -341,7 +341,7 @@
           <table class="gap-table">
             <tr>
               <td>Governor</td>
-              <td class="gap-status known">Tim Walz (appoints commissioners)</td>
+              <td class="gap-status known">Tim Walz (former teacher/coach)</td>
             </tr>
             <tr>
               <td>MDE Commissioner (2019-Mar 2021)</td>
@@ -355,12 +355,29 @@
               <td>DHS Commissioner</td>
               <td class="gap-status known">Jodi Harpstead</td>
             </tr>
+            <tr>
+              <td>Judge who ordered payments</td>
+              <td class="gap-status known">John Guthmann (Ramsey County)</td>
+            </tr>
           </table>
-          <p class="gap-note"><strong>Key:</strong> MDE leadership had authority to discipline or fire staff who failed oversight. They did not. The choice to keep or remove commissioners sits with Governor Walz.</p>
+          <p class="gap-note"><strong>Key:</strong> Walz came from the education world - he and MDE are likely aligned, not at odds. He appoints commissioners, they serve at his pleasure. MDE leadership had authority to fire staff. They didn't. Walz had authority to fire commissioners. He didn't.</p>
         </div>
 
         <div class="gap-card">
-          <h3>GAP 2: WHAT DID THEY KNOW?</h3>
+          <h3>GAP 2: THE "JUDGE MADE US" DEFENSE</h3>
+          <p>Walz claims Judge Guthmann forced them to pay. Questions:</p>
+          <ul>
+            <li>Did they appeal the ruling?</li>
+            <li>Did they immediately notify FBI/USDA?</li>
+            <li>Did they implement additional oversight while paying?</li>
+            <li>Did they do everything legally possible to stop it?</li>
+            <li>Or did the ruling provide convenient cover?</li>
+          </ul>
+          <p class="gap-note">Who appointed Judge Guthmann? Any connections to investigate?</p>
+        </div>
+
+        <div class="gap-card">
+          <h3>GAP 3: WHAT DID THEY KNOW?</h3>
           <ul>
             <li>When was Governor's office first briefed on fraud?</li>
             <li>Were there internal warnings before FBI raid?</li>
@@ -371,7 +388,7 @@
         </div>
 
         <div class="gap-card">
-          <h3>GAP 3: WHY ONLY FEDERAL PROSECUTIONS?</h3>
+          <h3>GAP 4: WHY ONLY FEDERAL PROSECUTIONS?</h3>
           <ul>
             <li>All 75+ charges are federal</li>
             <li>Zero state charges filed</li>
@@ -382,7 +399,7 @@
         </div>
 
         <div class="gap-card">
-          <h3>GAP 4: POST-AUDIT SILENCE</h3>
+          <h3>GAP 5: POST-AUDIT SILENCE</h3>
           <ul>
             <li>Audit found "lax oversight" - no consequences</li>
             <li>Audit found "failed to act" - no terminations</li>
