Fix visual bar to show all three fraud tiers: 1% FOF, 4% other confirmed, 37% under investigation

--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
       <div class="visual-bar">
         <div class="deficit-bar">
           <div class="bar-segment confirmed" style="width: 1%;"></div>
-          <div class="bar-segment prosecuted" style="width: 3%;"></div>
-          <div class="bar-segment potential" style="width: 33%;"></div>
-          <div class="bar-segment unknown" style="width: 63%;"></div>
+          <div class="bar-segment confirmed2" style="width: 4%;"></div>
+          <div class="bar-segment potential" style="width: 37%;"></div>
+          <div class="bar-segment unknown" style="width: 58%;"></div>
         </div>
         <div class="bar-legend">
-          <span class="legend-item"><span class="dot confirmed"></span>Confirmed ($250M)</span>
-          <span class="legend-item"><span class="dot prosecuted"></span>Prosecuting ($1B)</span>
-          <span class="legend-item"><span class="dot potential"></span>Potential ($9B)</span>
-          <span class="legend-item"><span class="dot unknown"></span>Unknown ($15B)</span>
+          <span class="legend-item"><span class="dot confirmed"></span>Confirmed FOF ($250M / ~1%)</span>
+          <span class="legend-item"><span class="dot confirmed2"></span>Confirmed Other ($1B+ / ~4%)</span>
+          <span class="legend-item"><span class="dot potential"></span>Under Investigation ($9B / ~37%)</span>
+          <span class="legend-item"><span class="dot unknown"></span>Unaccounted ($14B / ~58%)</span>
         </div>
       </div>
     </section>
