Add actual spending amounts: school meals /yr, education billions, special ed  biennium - TBD for paid leave, child credits, housing

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
           <thead>
             <tr>
               <th>PROGRAM</th>
+              <th>ANNUAL/B biennium</th>
               <th>TYPE</th>
               <th>NOTES</th>
             </tr>
@@ -117,33 +118,45 @@
           <tbody>
             <tr>
               <td><strong>Universal Free School Meals</strong></td>
+              <td>$330M/yr ($659M biennium)</td>
               <td>Ongoing</td>
-              <td>Permanent entitlement - politically impossible to remove</td>
+              <td>Permanent entitlement - costs rising 13%</td>
+            </tr>
+            <tr>
+              <td><strong>Education Baseline Increases</strong></td>
+              <td>Billions</td>
+              <td>Ongoing</td>
+              <td>$25.7B biennial budget - increased per-pupil funding</td>
+            </tr>
+            <tr>
+              <td><strong>Special Education</strong></td>
+              <td>$840M biennium</td>
+              <td>Ongoing</td>
+              <td>Increased funding to address shortfalls</td>
             </tr>
             <tr>
               <td><strong>Paid Family Leave</strong></td>
+              <td>TBD</td>
               <td>Ongoing</td>
-              <td>New permanent program created from one-time surplus</td>
+              <td>New permanent program - costs not yet fully calculated</td>
             </tr>
             <tr>
               <td><strong>Child Tax Credits</strong></td>
+              <td>TBD</td>
               <td>Ongoing</td>
-              <td>Expanded and made permanent</td>
+              <td>Expanded credits - permanent</td>
             </tr>
             <tr>
               <td><strong>Housing Programs</strong></td>
+              <td>TBD</td>
               <td>Ongoing</td>
-              <td>Increased spending, some linked to fraud</td>
+              <td>Increased spending - some linked to fraud</td>
             </tr>
             <tr>
-              <td><strong>Education Spending</strong></td>
+              <td><strong>Other Entitlements</strong></td>
+              <td>Remaining $14B</td>
               <td>Ongoing</td>
-              <td>Increased baseline spending</td>
-            </tr>
-            <tr>
-              <td><strong>Other DFL Priorities</strong></td>
-              <td>Ongoing</td>
-              <td>Various entitlement expansions</td>
+              <td>Various DFL priority expansions</td>
             </tr>
           </tbody>
         </table>
