--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </tr>
           </tbody>
         </table>
-        <p class="ap-quote">"Half of $18B in federal funds for Minnesota-run programs may have been defrauded" — AP News reporting on federal investigation, Dec 2024</p>
+        <p class="ap-quote">"Half of $18B in federal funds for Minnesota-run programs may have been defrauded" — AP News (Dec 2024), reporting on FBI/HHS OIG investigation</p>
       </div>
 
       <div class="visual-bar">
@@ -105,12 +105,12 @@
 
       <div class="spending-breakdown">
         <h3>THE $14B SPENDING BREAKDOWN</h3>
-        <p class="breakdown-note">Where the remaining $14B went - DFL programs that create permanent dependency:</p>
+        <p class="breakdown-note">Where the remaining $14B went - DFL programs creating permanent dependency:</p>
         <table class="spending-table">
           <thead>
             <tr>
               <th>PROGRAM</th>
-              <th>ANNUAL/B biennium</th>
+              <th>ANNUAL/BIENNIUM</th>
               <th>TYPE</th>
               <th>NOTES</th>
             </tr>
@@ -154,13 +154,13 @@
             </tr>
             <tr>
               <td><strong>Other Entitlements</strong></td>
-              <td>Remaining $14B</td>
+              <td>Balance</td>
               <td>Ongoing</td>
               <td>Various DFL priority expansions</td>
             </tr>
           </tbody>
         </table>
-        <p class="breakdown-insight"><strong>The Pattern:</strong> Used a one-time surplus to create permanent, politically untouchable obligations. When the money runs out, taxpayers must fill the gap.</p>
+        <p class="breakdown-insight"><strong>The Pattern:</strong> One-time surplus used to create permanent, politically untouchable obligations. When money runs out, taxpayers fill the gap.</p>
       </div>
     </section>
 
@@ -189,8 +189,8 @@
         <p class="compare-insight"><strong>The fraud equals 4-5 years of new tax revenue.</strong></p>
       </div>
 
-      <div class="accountability-box">
-        <p><strong>78 charged. 50+ convicted. Zero state officials fired.</strong></p>
+          <div class="accountability-box">
+        <p><strong>75+ charged. 51+ convicted. Zero state officials fired.</strong></p>
       </div>
     </section>
 
@@ -243,7 +243,7 @@
             <li>Minnesota Department of Education (MDE) tries to stop fraud → gets sued → payments resume</li>
             <li>State audit finds "lax oversight" → no one fired</li>
             <li>Attorney General's son received donations from connected people</li>
-            <li>78 charged (all small fish) → zero state officials</li>
+            <li>75+ charged (all small fish) → zero state officials</li>
           </ul>
           <p class="pattern-note">System protects itself.</p>
         </div>
@@ -421,8 +421,8 @@
 
       <div class="network-insight">
         <h3>THE KEY INSIGHT</h3>
-        <p><strong>Karl Procaccini</strong> was Walz's personal legal counsel. In October 2023, Walz appointed him to the Minnesota Supreme Court. Walz's own lawyer now sits on the state's highest court.</p>
-        <p class="pattern-note">When Walz came from the education world, appointed the education commissioners, appointed judges who hear fraud cases, and his former lawyer is on the Supreme Court - there's no one in the system positioned to hold him accountable except federal prosecutors.</p>
+        <p><strong>Karl Procaccini</strong> was Walz's personal legal counsel. In October 2023, Walz appointed him to the Minnesota Supreme Court. Walz's lawyer now sits on the state's highest court.</p>
+        <p class="pattern-note">Walz came from education, appointed education commissioners, appointed judges who hear fraud cases, and his former lawyer is on the Supreme Court. No one in the system can hold him accountable except federal prosecutors.</p>
       </div>
     </section>
 
@@ -461,7 +461,7 @@
           </div>
           <div class="timeline-item">
             <span class="timeline-date">Sep 2022</span>
-            <span class="timeline-event">First indictments. 48 charged.</span>
+            <span class="timeline-event">First indictments. Charges begin.</span>
           </div>
           <div class="timeline-item">
             <span class="timeline-date">Jun 2024</span>
@@ -507,7 +507,7 @@
               <td class="gap-status unknown">Sarah West, Hilary Caligiuri</td>
             </tr>
           </table>
-          <p class="gap-note"><strong>Key:</strong> Walz came from the education world - he and MDE are likely aligned, not at odds. He appoints commissioners, they serve at his pleasure. MDE leadership had authority to fire staff. They didn't. Walz had authority to fire commissioners. He didn't.</p>
+          <p class="gap-note"><strong>Key:</strong> Walz came from education - he and MDE are aligned, not at odds. He appoints commissioners who serve at his pleasure. MDE had authority to fire staff but didn't. Walz had authority to fire commissioners but didn't.</p>
         </div>
 
         <div class="gap-card">
@@ -653,9 +653,9 @@
       </div>
     </section>
 
-    <!-- SECTION 8: SUMMARY -->
+    <!-- SECTION 9: SUMMARY -->
     <section class="system-section summary-section">
-      <div class="section-label">THE BOTTOM LINE</div>
+      <div class="section-label">SECTION 9: THE BOTTOM LINE</div>
       <h2>THE STORY IN NUMBERS</h2>
       
       <div class="summary-grid">
