Fix fraud percentage: 43% (confirmed .25B + under investigation ), not just 37%

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- SECTION 2: THE FRAUD -->
     <section class="system-section">
       <div class="section-label">SECTION 2: THE FRAUD</div>
-      <h2>UP TO 37% COULD BE FRAUD</h2>
+      <h2>UP TO 43% COULD BE FRAUD</h2>
       
       <div class="fraud-tiers">
         <table class="takeaway-table">
@@ -86,6 +86,7 @@
           </tbody>
         </table>
         <p class="ap-quote">"Half of $18B in federal funds for Minnesota-run programs may have been defrauded" — AP News (Dec 2024), reporting on FBI/HHS OIG investigation</p>
+        <p class="ap-quote" style="margin-top: 0.5rem;">Total confirmed + under investigation: <strong>$10.25B (~43% of $24B swing)</strong></p>
       </div>
 
       <div class="visual-bar">
