Rebrand to Zero Fired - new name, tagline, hashtag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MN Fraud Investigation | Close the Loop</title>
+  <title>Zero Fired | Minnesota Fraud Accountability</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
@@ -14,8 +14,9 @@
 
   <header class="main-header">
     <div class="header-content">
-      <h1>CLOSE THE LOOP</h1>
-      <p class="tagline">Minnesota Fraud → Accountability</p>
+      <h1>ZERO FIRED</h1>
+      <p class="tagline">$10B in fraud. 70+ charged. Zero state officials fired.</p>
+      <p class="tagline-sub">#ZeroFired</p>
     </div>
   </header>
 
@@ -484,6 +485,7 @@
         <p><strong>Is this incompetence, or is this a system?</strong></p>
         <p class="subtext">The records will tell us. Help get them.</p>
         <button class="action-btn large" onclick="showFOIA()">File a Records Request →</button>
+        <p class="hashtag">#ZeroFired</p>
       </div>
     </section>
 
