Update surplus link to MN Chamber source

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="stat-row">
           <div class="stat-item">
             <span class="stat-number green">$17.6B</span>
-            <span class="stat-label"><a href="https://mn.gov/mmb/forecast/forecast/" target="_blank">Surplus (2022)</a></span>
+            <span class="stat-label"><a href="https://www.mnchamber.com/blog/2023-24-session-outcomes-budget-and-spending" target="_blank">Surplus (2023)</a></span>
           </div>
           <div class="stat-arrow">→</div>
           <div class="stat-item">
