Make forensic methodology the main thread: new hero, Forensic Analysis section, updated quick stats, full CSS styling

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </button>
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
+        <li><a href="#forensic">The Research</a></li>
         <li><a href="#fiscal">The Money</a></li>
         <li><a href="#klobuchar">Klobuchar</a></li>
-        <li><a href="#signal-gate">Signal Gate</a></li>
         <li><a href="#disrupt">Disrupt</a></li>
         <li><a href="#ammo">Ammo</a></li>
         <li><a href="#investigate">Investigate</a></li>
@@ -42,29 +42,142 @@
   <section id="home" class="hero-section">
     <div class="hero-content">
       <h1 class="hero-title">Minnesota Reclamation Project</h1>
-      <p class="hero-tagline">Documenting the failures. Exposing the silence. Demanding accountability.</p>
+      <p class="hero-tagline">Forensic Analysis of Minnesota's Spending Crisis</p>
       <p class="hero-description">
-        <strong>2026 Governor's Race:</strong> Amy Klobuchar wants to lead Minnesota. 
-        She hasn't said a word about the fraud, the crime surge, or the machine that enabled it. 
-        Same donors. Same policies. Same silence. This is the record.
+        <strong>The Finding:</strong> Minnesota spent <strong>$44.5 billion more</strong> than Wisconsin 
+        on the same programs over 6 years—67% more per Medicaid enrollee, 110% more on welfare. 
+        This isn't a partisan claim. It's math. We show our work.
       </p>
       <div class="hero-stats" id="quick-stats">
         <!-- Populated by JavaScript -->
       </div>
       <div class="hero-cta">
-        <a href="#klobuchar" class="btn btn-primary">Expose Klobuchar</a>
-        <a href="#ammo" class="btn btn-secondary">Get Attack Lines</a>
+        <a href="#forensic" class="btn btn-primary">See the Analysis</a>
+        <a href="#fiscal" class="btn btn-secondary">Follow the Money</a>
         <a href="#investigate" class="btn btn-outline">Help Investigate</a>
       </div>
     </div>
     
     <!-- Hero Newsletter -->
     <div class="hero-newsletter">
-      <p class="newsletter-label">The ammo depot for accountability. Share widely.</p>
+      <p class="newsletter-label">Independent research. Transparent methodology. Share widely.</p>
       <form class="newsletter-form newsletter-form-inline" id="hero-newsletter-form">
         <input type="email" placeholder="Your email for updates" required>
         <button type="submit" class="btn btn-gold">Join the Fight</button>
       </form>
+    </div>
+  </section>
+
+  <!-- FORENSIC METHODOLOGY - THE MAIN THREAD -->
+  <section id="forensic" class="section section-dark">
+    <div class="section-container">
+      <div class="section-header">
+        <span class="section-label">The Research</span>
+        <h2 class="section-title">Our Methodology</h2>
+        <p class="section-subtitle">Minnesota vs. Wisconsin: Same programs. Different spending. We show the math.</p>
+      </div>
+
+      <div class="forensic-intro">
+        <p>
+          <strong>The Question:</strong> Is Minnesota's spending justified, or is something else happening?
+        </p>
+        <p>
+          <strong>The Method:</strong> Compare Minnesota to Wisconsin—similar demographics, adjacent state, 
+          different governance—on a per-capita and per-beneficiary basis using federal data sources 
+          (KFF, MACPAC, Census Bureau, HHS OIG).
+        </p>
+        <p>
+          <strong>The Finding:</strong> Minnesota isn't uniformly generous. It strategically overspends 
+          in programs where the federal government pays most of the cost and verification is weak—while 
+          spending <em>less</em> than Wisconsin on programs where the state pays or federal rules are strict.
+        </p>
+      </div>
+
+      <!-- The Core Comparison -->
+      <div class="forensic-comparison">
+        <h3>The Core Numbers</h3>
+        <div class="comparison-grid" id="forensic-comparison-grid">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- The Pattern -->
+      <div class="forensic-pattern">
+        <h3>The Pattern</h3>
+        <div class="pattern-columns">
+          <div class="pattern-col pattern-high">
+            <h4>Where MN Overspends</h4>
+            <p class="pattern-subtitle">High federal match, weak verification</p>
+            <ul id="forensic-high-spend">
+              <!-- Populated by JavaScript -->
+            </ul>
+          </div>
+          <div class="pattern-col pattern-low">
+            <h4>Where MN Underspends</h4>
+            <p class="pattern-subtitle">State pays or strict federal rules</p>
+            <ul id="forensic-low-spend">
+              <!-- Populated by JavaScript -->
+            </ul>
+          </div>
+        </div>
+        <div class="pattern-conclusion">
+          <p><strong>Conclusion:</strong> This isn't generosity. It's strategic extraction of federal funds. 
+          Minnesota overspends where someone else pays, and underspends where they pay.</p>
+        </div>
+      </div>
+
+      <!-- The Calculation -->
+      <div class="forensic-calculation">
+        <h3>The Calculation</h3>
+        <div class="calculation-box" id="forensic-calculation">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- Who Pays -->
+      <div class="forensic-whopays">
+        <h3>Who Pays for the Excess?</h3>
+        <div class="whopays-grid" id="forensic-whopays">
+          <!-- Populated by JavaScript -->
+        </div>
+        <p class="whopays-note">
+          <strong>Key insight:</strong> 64% of Minnesota's Medicaid excess comes from federal taxpayers—all Americans. 
+          Minnesota gets the political benefit of "generous" programs while the rest of the country pays the bill.
+        </p>
+      </div>
+
+      <!-- Political Connections -->
+      <div class="forensic-politics">
+        <h3>The Political Connections</h3>
+        <div class="politics-summary" id="forensic-politics">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- Sources -->
+      <div class="forensic-sources">
+        <h3>Our Sources</h3>
+        <ul class="sources-list">
+          <li><strong>KFF State Health Facts</strong> — Medicaid enrollment and spending by state</li>
+          <li><strong>MACPAC MACStats</strong> — Federal Medicaid data and per-enrollee comparisons</li>
+          <li><strong>Urban Institute Welfare Rules Database</strong> — TANF benefit levels by state</li>
+          <li><strong>Census Bureau</strong> — Education spending and population data</li>
+          <li><strong>HHS Office of Inspector General</strong> — Federal audit findings</li>
+          <li><strong>DOJ/U.S. Attorney's Office</strong> — Fraud indictments and convictions</li>
+          <li><strong>Minnesota/Wisconsin state budget documents</strong> — Program spending details</li>
+        </ul>
+        <p class="sources-note">
+          All data is from official government sources. We cite our sources. We show our math. 
+          If we're wrong, show us where.
+        </p>
+      </div>
+
+      <!-- The Bottom Line -->
+      <div class="forensic-bottomline">
+        <blockquote id="forensic-bottomline">
+          <!-- Populated by JavaScript -->
+        </blockquote>
+      </div>
     </div>
   </section>
 
