Add Father Brown moral analysis: the ideology that enabled  in excess spending - inversions, enabling beliefs, hidden pride, crossroads

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#forensic">The Research</a></li>
+        <li><a href="#father-brown">The Diagnosis</a></li>
         <li><a href="#fiscal">The Money</a></li>
         <li><a href="#klobuchar">Klobuchar</a></li>
-        <li><a href="#disrupt">Disrupt</a></li>
         <li><a href="#ammo">Ammo</a></li>
         <li><a href="#investigate">Investigate</a></li>
       </ul>
@@ -177,6 +177,83 @@
         <blockquote id="forensic-bottomline">
           <!-- Populated by JavaScript -->
         </blockquote>
+      </div>
+    </div>
+  </section>
+
+  <!-- FATHER BROWN ANALYSIS - THE MORAL FRAMEWORK -->
+  <section id="father-brown" class="section section-light">
+    <div class="section-container">
+      <div class="section-header">
+        <span class="section-label">The Diagnosis</span>
+        <h2 class="section-title">How Was This Possible?</h2>
+        <p class="section-subtitle">A moral examination in the tradition of Chesterton's priest-detective</p>
+      </div>
+
+      <div class="fatherbrown-intro" id="fatherbrown-intro">
+        <!-- Populated by JavaScript -->
+      </div>
+
+      <!-- The Moral Inversion -->
+      <div class="fatherbrown-section">
+        <h3>The Inversion: Where Good Becomes Evil</h3>
+        <p class="section-desc">When accountability becomes "targeting" and fraud becomes "resource allocation," you know the moral framework has been inverted.</p>
+        <div class="inversion-grid" id="fatherbrown-inversions">
+          <!-- Populated by JavaScript -->
+        </div>
+        <blockquote class="scripture-quote">
+          "Woe to those who call evil good and good evil, who put darkness for light and light for darkness." — Isaiah 5:20
+        </blockquote>
+      </div>
+
+      <!-- The Enabling Beliefs -->
+      <div class="fatherbrown-section">
+        <h3>The Ideology That Made It Seem Right</h3>
+        <p class="section-desc">Father Brown solved crimes by understanding what the criminal believed that made the crime seem right.</p>
+        <div class="beliefs-list" id="fatherbrown-beliefs">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- The Hidden Pride -->
+      <div class="fatherbrown-section">
+        <h3>The Sin Beneath: Pride of the Helper Class</h3>
+        <div class="pride-diagnosis" id="fatherbrown-pride">
+          <!-- Populated by JavaScript -->
+        </div>
+        <blockquote class="lewis-quote">
+          "Of all tyrannies, a tyranny sincerely exercised for the good of its victims may be the most oppressive." — C.S. Lewis
+        </blockquote>
+      </div>
+
+      <!-- The Moments of Choice -->
+      <div class="fatherbrown-section">
+        <h3>The Crossroads: Where Conscience Was Overridden</h3>
+        <p class="section-desc">At each critical moment, officials chose ideology over integrity.</p>
+        <div class="moments-timeline" id="fatherbrown-moments">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- The Systemic Sin -->
+      <div class="fatherbrown-section">
+        <h3>The Deeper Problem: A Worldview That Corrupts</h3>
+        <div class="systemic-diagnosis" id="fatherbrown-systemic">
+          <!-- Populated by JavaScript -->
+        </div>
+      </div>
+
+      <!-- The Verdict -->
+      <div class="fatherbrown-verdict" id="fatherbrown-verdict">
+        <!-- Populated by JavaScript -->
+      </div>
+
+      <!-- Questions for Klobuchar -->
+      <div class="fatherbrown-questions">
+        <h3>Questions Father Brown Would Ask Senator Klobuchar</h3>
+        <div class="questions-list" id="fatherbrown-questions">
+          <!-- Populated by JavaScript -->
+        </div>
       </div>
     </div>
   </section>
